err/annotater.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FormAlchemy-1.5.5.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/Routes-2.4.1.dist-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Tempita-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/WebHelpers2-2.0.dist-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/annotater'...
Listing './lib/python3.5/site-packages/annotater/marginalia'...
Compiling './lib/python3.5/site-packages/annotater/marginalia/marginalia_test.py'...
***   File "./lib/python3.5/site-packages/annotater/marginalia/marginalia_test.py", line 73
    print '"%s"' % out.encode('utf-8')
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/annotater/model_test.py'...
***   File "./lib/python3.5/site-packages/annotater/model_test.py", line 42
    print out
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/annotater/store.py'...
***   File "./lib/python3.5/site-packages/annotater/store.py", line 208
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/annotater/store_test.py'...
***   File "./lib/python3.5/site-packages/annotater/store_test.py", line 126
    print anno_id
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/annotater-0.2.egg-info'...
Listing './lib/python3.5/site-packages/formalchemy'...
Listing './lib/python3.5/site-packages/formalchemy/ext'...
Listing './lib/python3.5/site-packages/formalchemy/ext/pylons'...
Listing './lib/python3.5/site-packages/formalchemy/ext/pylons/resources'...
Listing './lib/python3.5/site-packages/formalchemy/ext/zope'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/de'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/en'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/es'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/fa'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/fa/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/fr'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/hu'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/ja'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/pl'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/pt_BR'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/ru'...
Listing './lib/python3.5/site-packages/formalchemy/i18n_resources/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formalchemy/paster_templates'...
Listing './lib/python3.5/site-packages/formalchemy/paster_templates/pylons_fa'...
Listing './lib/python3.5/site-packages/formalchemy/paster_templates/pylons_fa/+package+'...
Listing './lib/python3.5/site-packages/formalchemy/paster_templates/pylons_fa/+package+/config'...
Listing './lib/python3.5/site-packages/formalchemy/paster_templates/pylons_fa/+package+/controllers'...
Listing './lib/python3.5/site-packages/formalchemy/paster_templates/pylons_fa/+package+/forms'...
Listing './lib/python3.5/site-packages/formalchemy/paster_templates/pylons_fa/+package+/templates'...
Listing './lib/python3.5/site-packages/formalchemy/paster_templates/pylons_fa/+package+/templates/forms'...
Listing './lib/python3.5/site-packages/formalchemy/tests'...
Listing './lib/python3.5/site-packages/formalchemy/tests/data'...
Listing './lib/python3.5/site-packages/formalchemy/tests/data/genshi'...
Listing './lib/python3.5/site-packages/formalchemy/tests/data/mako'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/routes'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/tempita'...
Listing './lib/python3.5/site-packages/webhelpers2'...
Listing './lib/python3.5/site-packages/webhelpers2/html'...
Listing './lib/python3.5/site-packages/webhelpers2/tests'...
Listing './lib/python3.5/site-packages/webob'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
